Use Ollama with remote/local host config

--- a/sample.env
+++ b/sample.env
@@ -5,3 +5,5 @@ SMTP_PORT=587
 USE_TLS=True
 GOOGLE_API_CREDENTIALS=credentials.json
 YAML_RESUME_DATA=resume_data.yaml
+OLLAMA_MODEL=your_ollama_model
+OLLAMA_HOST=http://localhost:11434
