Optimized RenderCV integration

--- a/sample.env
+++ b/sample.env
@@ -7,3 +7,7 @@ GOOGLE_API_CREDENTIALS=credentials.json
 YAML_RESUME_DATA=resume_data.yaml
 OLLAMA_MODEL=your_ollama_model
 OLLAMA_HOST=http://localhost:11434
+LOG_FILE=ps.log
+RENDERCV_DIR=rendercv_assets
+GOOGLE_SHEET_NAME=your_google_sheet_name
+RESUME_NAME_PREFIX=your_first_name
