--- a/sample.env
+++ b/sample.env
@@ -5,9 +5,12 @@ SMTP_PORT=587
 USE_TLS=True
 GOOGLE_API_CREDENTIALS=credentials.json
 YAML_RESUME_DATA=resume_data.yaml
-OLLAMA_MODEL=your_ollama_model
-OLLAMA_HOST=http://localhost:11434
 LOG_FILE=ps.log
 RENDERCV_DIR=rendercv_assets
 GOOGLE_SHEET_NAME=your_google_sheet_name
 RESUME_NAME_PREFIX=your_first_name
+LLM_PROVIDER=openai
+OPENAI_API_KEY=your_openai_api_key
+OPENAI_MODEL=gpt-4o-mini
+OLLAMA_HOST=http://localhost:11434
+OLLAMA_MODEL=mistral
